--- a/4.0_DeviceControl.md
+++ b/4.0_DeviceControl.md
@@ -136,4 +136,63 @@ GenCP指定了EVENT_CMD作为事件command_id。EVENT_ACK command_id没有被USB
 
 #### 4.1.3.2.1状态编码
 
+GenCP指定了应答包层中的状态码字段和相关状态码。USB3 Vision设备必须使用GenCP所规定的状态码。
 
+USB3 Vision除了通用GenCP状态码外还定义了技术指定的状态码。USB3 Vision状态码使用于控制和数据流。
+
+```
+[R-37c]
+状态码格式必须符合表4-1中的GenCP标准
+```
+<table>
+<tr><td>Bit offset(lsb << x)</td><td>Width(bits)</td><td>Description</td></tr>
+<tr><td>0</td><td>0</td><td>status_code</td><tr>
+<tr><td>12</td><td>2</td><td>reserved
+
+    Set to 0
+</td><tr>
+
+<tr><td>13</td><td>2</td><td>namespace
+
+    0 = GenCP Status Code
+    1 = Technology Specific Code
+    2 = Device Specific Code
+</td><tr>
+<tr><td>15</td><td>1</td><td>Severity
+
+    0 = Warning/Info
+    1 = Error
+</td><tr>
+
+<tr><td colspan = '3'></td></tr>
+</table>
+
+```
+```
+
+```
+[R-38c]
+USB3 Vision 状态码必须设置命名空间区域为1
+```
+
+表2-4和表4-3指定了USB3 Vision的状态码：
+
+表4-2 命令状态码
+<table>
+<tr><td> Status Code </td><td>Name</td><td>Description</td></tr>
+<tr><td> 0XA001 </td><td>U3V_STATUS_RESEND_NOT_SUPPORTED</td><td>当命令段为以下内容时必须在应答字段响应中使用这个状态码
+    
+    -前缀有效
+    -command_id有效
+    -Flags段设置为0xC000
+     （命令重发）
+
+</td></tr>
+<tr><td> 0XA002 </td><td>U3V_STATUS_DSI_ENDPOINT_HALTED</td><td>'Description'</td></tr>
+<tr><td> 0XA003 </td><td>U3V_STATUS_SI_PAYLOAD_SIZE_NOT_
+ALIGNED</td><td>'Description'</td></tr>
+<tr><td> 0XA004 </td><td>U3V_STATUS_SI_REGISTERS_
+INCONSISTENT</td><td>'Description'</td></tr>
+<tr><td colspan = '3'></td></tr>
+
+</table>
